# docs/swagger.json
@@ -301,8 +301,25 @@
             }
         },
         "/api/v1/manifests": {
+            "get": {
+                "tags": [
+                    "Manifest"
+                ],
+                "summary": "获取应用列表",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Manifest"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
-                "description": "根据 Application 创建 Manifest，自动生成名称",
+                "description": "根据 Manifest 创建 Manifest，自动生成名称",
                 "consumes": [
                     "application/json"
                 ],
@@ -338,6 +355,31 @@
                             "additionalProperties": {
                                 "type": "string"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/manifests/{id}": {
+            "get": {
+                "tags": [
+                    "Manifest"
+                ],
+                "summary": "获取应用",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Manifest ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Manifest"
                         }
                     }
                 }
@@ -410,6 +452,9 @@
                     "description": "关联 Application",
                     "type": "string"
                 },
+                "application_name": {
+                    "type": "string"
+                },
                 "branch": {
                     "description": "git branch",
                     "type": "string"
@@ -432,7 +477,6 @@
                     "type": "string"
                 },
                 "name": {
-                    "description": "application + 日期 + 随机数",
                     "type": "string"
                 },
                 "pipeline_id": {
