# pkg/router/manifest.go
@@ -8,4 +8,6 @@ import (
 func RegisterManifestRoutes(rg *gin.RouterGroup) {
 
 	rg.POST("/manifests", api.ManifestRouteApi.Create)
+	rg.GET("/manifests", api.ManifestRouteApi.List)
+	rg.GET("/manifests/:id", api.ManifestRouteApi.Get)
 }
